--- a/public/index.html
+++ b/public/index.html
@@ -222,9 +222,14 @@
                 card.className = 'bg-white rounded-lg shadow-md p-6 transition-all duration-200';
                 card.setAttribute('data-domain', domain);
 
+                const displayName = this.getDisplayName(domain);
+
                 card.innerHTML = `
                     <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-lg font-semibold text-gray-800 truncate" title="${domain}">${domain}</h3>
+                        <div>
+                            <h3 class="text-lg font-semibold text-gray-800" title="${domain}">${displayName}</h3>
+                            <p class="text-sm text-gray-500 truncate" title="${domain}">${domain}</p>
+                        </div>
                         <span class="status-badge px-3 py-1 rounded-full text-sm font-medium bg-gray-500 text-white">Checking...</span>
                     </div>
                     
@@ -314,6 +319,17 @@
             openDomainInNewTab(domain) {
                 const url = `https://${domain}`;
                 window.open(url, '_blank', 'noopener,noreferrer');
+            }
+
+            getDisplayName(domain) {
+                // Extract the subdomain part (before .pemdeslobar.com)
+                const subdomain = domain.replace('.pemdeslobar.com', '');
+                
+                // Convert to title case (first letter uppercase, rest lowercase)
+                return subdomain
+                    .split('-')
+                    .map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase())
+                    .join(' ');
             }
         }
 
